--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,38 +1,37 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header{
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: black;
   color: white;
+  /* position: fixed; 要素を固定(基準場所はウィンドウ全体) */
+  width: 100%;
+  z-index: 10; /*要素の重なり(値が大きいほど上に重なる)*/
 }
 
-.App-link {
-  color: #61dafb;
+header .logo h3 {
+  font-size: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav ul li{
+  list-style: none;
+  display: inline-block;
+  margin-right: 30px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+  transition-property: color; /*変化させるプロパティ*/
+  transition: 0.2s; /*アニメーションの実行時間*/
+}
+
+nav ul li a:hover{
+  color: green;
 }
